fix: style: no z-index for ‘crucial’ modal
in this case only used as a dialog element and should not be above menus

--- a/app/assets/stylesheets/components/_ui-modals.sass
+++ b/app/assets/stylesheets/components/_ui-modals.sass
@@ -67,6 +67,7 @@
   position: relative
   margin-top: 20px
   margin-bottom: 20px
+  z-index: initial
 
 // Size variations
 
